--- a/doc/themes/custom.css
+++ b/doc/themes/custom.css
@@ -1,9 +1,9 @@
 div.sphx-glr-download a {
-  background-color: var(--sd-color-primary);
+  background-color: transparent;
   background-image: none;
+  border: 1px solid var(--sd-color-primary);
   border-radius: 4px;
-  border: 0px;
-  color: #ffffff;
+  color: var(--sd-color-primary);
   padding: 1ex;
   text-align: center;
 }
@@ -12,7 +12,9 @@ div.sphx-glr-download a:hover {
   box-shadow: none;
   text-decoration: none;
   background-image: none;
-  background-color: var(--sd-color-primary-highlight);
+  background-color: transparent;
+  border: 1px solid var(--sd-color-primary-highlight);
+  color: var(--sd-color-primary-highlight);
 }
 
 div.sphx-glr-download a .pre {
