--- a/doc/themes/custom.css
+++ b/doc/themes/custom.css
@@ -68,3 +68,16 @@ button.copybtn {
   background-color: var(--color-background-secondary);
   border-left: 4px solid var(--color-background-border);
 }
+
+table.plotting-table {
+  table-layout: fixed;
+  width: 100%;
+}
+
+table.plotting-table col {
+  width: auto !important;
+}
+
+table.plotting-table img {
+  object-fit: contain;
+}
